--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "type": "module"
+  "type": "module",
+  "bin": {
+    "orm": "./orm/cli.js"
+  }
 }
